src/test/deca/syntax/valid/SansObjet/Println-var.deca
// Description:
//    Printing a variable
//
// Results:
//    tree with x as a branch of println
//
// Historique:
//    cree le 08/01/2022

{
        println(x);
}
