src/test/deca/syntax/invalid/HelloWorld/Println-FiveEscap.deca
// Description:
//    String with five escape chars
//
// Results:
//    test_lex : error line 12 on the whole string
//
//
// History:
//    cree le 08/01/2022

{
println("\\\\\");
}